# MyHsys

./: README.md
3DMath/: CMakeLists.txt  main.cpp
3DMath/include/: EulerAngles.h  MathUtil.h  Matrix4x3.h  Quaternion.h  RotationMatrix.h  Vector3.h  basemath.h
3DMath/source/: CMakeLists.txt  EulerAngles.cpp  MathUtil.cpp  Matrix4x3.cpp  Quaternion.cpp  RotationMatrix.cpp
3DMath/test/: CMakeLists.txt  testRotationMatrix.hpp
UnityHsysEffects/: Readme.md
UnityHsysEffects/MenuItem/: MainMenu.cs  MenuAddSelfEffects.cs  MenuItemEffects.cs
UnityHsysEffects/MenuItem/Editor/: MainMenu.cs  MainRightClickMenu.cs
UnityHsysEffects/RayTracing/: RayTracing.cs
UnityHsysEffects/ScriptAndShader/3D/: Hsys3DEffectBase.cs  HsysOutBorder.cs
UnityHsysEffects/ScriptAndShader/3D/Editor/: Hsys3DEffectsBaseMenuItem.cs
UnityHsysEffects/ScriptAndShader/BaseLib/: Perlin.cs
UnityHsysEffects/ScriptAndShader/BaseLib/CgincLib/: SSSS.cginc  Shadow.cginc
UnityHsysEffects/ScriptAndShader/BaseLib/CgincLib/3D/: OutBorder.cginc
UnityHsysEffects/ScriptAndShader/BaseLib/HlslLib/: AO.hlsl  Constant.hlsl  FBM.hlsl  Grayscale.hlsl  Noise.hlsl  Pre_SSS.hlsl  RealLight.hlsl  RealWater.hlsl  SLAM.hlsl
UnityHsysEffects/ScriptAndShader/Global/: HsysGetYourNeadVar.cs  HsysGlobalSetting.cs
UnityHsysEffects/ScriptAndShader/Post_processing/: HsysAO.cs  HsysBloom.cs  HsysBlur.cs  HsysDepthOfField.cs  HsysGlobalSetting.cs  HsysLens.cs  HsysToning.cs  HsysWaterBl.cs
UnityHsysEffects/ScriptAndShader/Post_processing/Editor/: HsysBloomMenuItem.cs  HsysBlurMenuItem.cs  HsysLensMenuItem.cs  HsysToningMenuItem.cs
UnityHsysEffects/ScriptAndShader/Post_processing/Materials/: cover_1050_1681220236777.mat
UnityHsysEffects/ScriptAndShader/Post_processing/Shader/: ZDeform.shader  ZDepthOfField.shader  ZWaterBl.shader
UnityHsysEffects/ScriptAndShader/UI/: HsysCardFlipping.cs
UnityHsysEffects/Shader/2D/2D_Alpha/: PixelOutline.cs  PixelOutline.shader
UnityHsysEffects/Shader/Post_processing/: WaterBl.cs
UnityNoiseGenerator/: Readme.md
UnityOctree/: MenuItem.cs  Readme.md
UnityOctree/Octree/: MenuItem.cs  Octree.cs
UnityOctree/begin/: AIFlyTo.cs  CreateTree.cs
(+24 files in other folders)
